--- a/.golangci.yml
+++ b/.golangci.yml
@@ -43,7 +43,7 @@ run:
   # Define the Go version limit.
   # Mainly related to generics support since go1.18.
   # Default: use Go version from the go.mod file, fallback on the env var `GOVERSION`, fallback on 1.17
-  go: '1.22.2'
+  go: '1.22.3'
 
 # output configuration options
 output:
@@ -264,7 +264,7 @@ linters-settings:
   goimports:
     # put imports beginning with prefix after 3rd-party packages;
     # it's a comma-separated list of prefixes
-    local-prefixes: workerpool
+    local-prefixes: github.com/LeoNdV001/workerpool
   gocyclo:
     # minimal code complexity to report, 30 by default (but we recommend 10-20)
     min-complexity: 20
